add padding for about us 2 with 50dvh, capitalize some words

--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@ object-fit: fill;
 	place-content: center;
 	width: 60vw;
 	margin-left: 20vw;
+	padding-top: 50dvh;
 }
 #about-us-font {
 	background-color: var(--blue-color);
