--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,6 @@ body {
 	padding-bottom: 3vw;
 	font-size: 4vw;
 	text-align: center;
-	margin-top: 10vw;
 }
 
 .location {
@@ -486,7 +485,7 @@ footer {
 	place-content: center;
 	width: 60vw;
 	margin-left: 20vw;
-	padding-top: 50dvh;
+	padding-top: 10vw;
 }
 #about-us-font {
 	background-color: var(--blue-color);
@@ -708,7 +707,7 @@ footer {
     grid-template-columns: repeat(5,1fr);
     width: 100%;
     background-color: var(--red-color);
-    margin-top: 110vh;
+    margin-top: 26vw;
 }
 
 .menu-coffee-header h2 {
@@ -721,7 +720,8 @@ footer {
 .subhdr {
 	display: flex;
 	flex-direction: column;
-	grid-column: 2/ span 2;
+	grid-column: 1/ span 3;
+	padding-left: 3vw;
 	justify-content: space-evenly;
 }
 
@@ -758,7 +758,8 @@ footer {
 .header-pain {
     display: flex;
     flex-direction: column;
-    grid-column: 3/ span 2;
+    grid-column: 3/ span 3;
+	padding-right: 3vw;
 	justify-content: space-evenly;
 }
 
