--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,20 @@ body {
     transition: all .5s ease-in-out;
 }  
 
+.dropdown-menu-content a:hover{
+	color: var(--yellow-color);
+	border-radius: .5dvw .5dvw .5dvw .5dvw;
+	margin: .2dvh .2dvw .2dvh .2dvw;
+}
+
+.dropdown-menu:hover .dropdown-menu-content{
+	display: block;
+	background-color: var(--blue-color);
+	overflow: hidden;
+	box-shadow: 0 2dvw 18dvw 0 rgba(51, 51, 51, 0.1);
+	border-radius: 1dvw 1dvw 1dvw 1dvw;
+  }
+
 .dropdown-menu a:hover, .dropdown-menu:focus {
     box-shadow: inset 0 -3.25em 0 0 var(--red-color);
 }
