--- a/css/style.css
+++ b/css/style.css
@@ -709,13 +709,14 @@
   /* menu */
   
   .menu {
-	height: 220vw;
+	height: 100%;
 	justify-self: center;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	justify-content: space-evenly;
 	align-content: center;
+	width: 100%;
   }
   
   .menu-main-content {
@@ -754,7 +755,7 @@
 	grid-template-columns: repeat(5, 1fr);
 	width: 100%;
 	background-color: var(--red-color);
-	margin-top: 26vw;
+	margin-top: auto;
   }
   
   .menu-coffee-header h2 {
