--- a/css/style.css
+++ b/css/style.css
@@ -968,4 +968,124 @@
 	z-index: -1;
 	transform: rotate(-10deg);
   }
+  .circles{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	z-index: -100;
+}
+
+.circles li{
+	position: fixed;
+	display: block;
+	list-style: none;
+	width: 2vw;
+	height: 0;
+	opacity: 0.4;
+	animation: animate 25s linear infinite;
+	bottom: -10vw;
+}
+
+.circles li:nth-child(1){
+	left: 25%;
+	width: 5vw;
+	height: 5vw;
+	animation-delay: 0s;
+	background: rgba(0, 86, 124, .4);
+}
+
+
+.circles li:nth-child(2){
+	left: 10%;
+	width: 2vw;
+	height: 2vw;
+	animation-delay: 2s;
+	animation-duration: 12s;
+	background: rgba(149, 38, 31, .4);
+}
+
+.circles li:nth-child(3){
+	left: 70%;
+	width: 2vw;
+	height: 2vw;
+	animation-delay: 4s;
+	background: rgba(0, 86, 124, .4);
+}
+
+.circles li:nth-child(4){
+	left: 40%;
+	width: 4vw;
+	height: 4vw;
+	animation-delay: 0s;
+	animation-duration: 18s;
+	background: rgba(149, 38, 31, .4);
+}
+
+.circles li:nth-child(5){
+	left: 65%;
+	width: 2vw;
+	height: 2vw;
+	animation-delay: 0s;
+	background: rgba(149, 38, 31, .4);
+}
+
+.circles li:nth-child(6){
+	left: 75%;
+	width: 8vw;
+	height: 8vw;
+	animation-delay: 3s;
+	background: rgba(0, 86, 124, .4);
+}
+
+.circles li:nth-child(7){
+	left: 35%;
+	width: 10vw;
+	height: 10vw;
+	animation-delay: 7s;
+	background: rgba(149, 38, 31, .4);
+}
+
+.circles li:nth-child(8){
+	left: 50%;
+	width: 2vw;
+	height: 2vw;
+	animation-delay: 15s;
+	animation-duration: 45s;
+	background: rgba(149, 38, 31, .4);
+}
+
+.circles li:nth-child(9){
+	left: 20%;
+	width: 1.7vw;
+	height: 1.7vw;
+	animation-delay: 2s;
+	animation-duration: 35s;
+	background: rgba(0, 86, 124, .4);
+}
+
+.circles li:nth-child(10){
+	left: 85%;
+	width: 11vw;
+	height: 11vw;
+	animation-delay: 0s;
+	animation-duration: 11s;
+	background: rgba(0, 86, 124, .4);
+}
+
+@keyframes animate {
+
+	0%{
+		transform: translateY(0) rotate(0deg);
+		opacity: 1;
+		border-radius: 0;
+	}
+
+	100%{
+		transform: translateY(-1000px) rotate(720deg);
+		opacity: 0;
+		border-radius: 50%;
+	}
+
+}
   
