--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,8 @@
   
   footer {
 	display: grid;
+	position:absolute;
+	margin: 0;
 	bottom: 0;
 	padding-top: 2vw;
 	padding-bottom: 2vw;
@@ -208,7 +210,10 @@
   .footer-right {
 	max-width: 12vw;
 	text-align: right;
-	justify-self: right;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding-bottom: 2vw;
 	padding-right: 3vw;
   }
   
@@ -400,7 +405,7 @@
 	color: var(--yellow-color);
 	background-color: var(--blue-color);
 	width: max-content;
-	padding: 0.2vw;
+	padding: 0.2vw 0.5vw;
 	border-radius: 0.3vw;
   }
   
@@ -521,12 +526,12 @@
   #about-us2 {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: repeat(3, .7fr);
 	place-items: center;
 	place-content: center;
 	width: 60vw;
 	margin-left: 20vw;
-	padding-top: 10vw;
+	margin-top: -8vw;
   }
   #about-us-font {
 	background-color: var(--blue-color);
