--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,30 @@
 	justify-content: space-evenly;
 	align-items: center;
   }
+
+  #illustrations-coffee{
+	height: 2vw;
+	width: 2vw;
+	margin-left: 3dvw;
+  }
+
+  #illustrations-pain{
+	height: 2vw;
+	width: 3.5vw;
+	margin-left: 4.6dvw;
+  }
+
+  #illustrations-sweets{
+	height: 2vw;
+	width: 4vw;
+	margin-left: 1.7dvw;
+  }
+
+  #illustrations-tea{
+	height: 2vw;
+	width: 2vw;
+	margin-left: 6dvw;
+  }
   
   .dropdown-menu {
 	position: relative;
@@ -74,23 +98,20 @@
   }
   
   .dropdown-menu-content a {
-	padding-left: 3vw;
-	padding-right: 3vw;
+	padding: .5dvh 0 .5dvh .5dvw;
 	font-size: 2vw;
 	font-family: var(--font-circular);
 	color: var(--yellow-color);
 	background-color: var(--blue-color);
-	margin-bottom: 0.7vw;
-	text-align: center;
 	text-decoration: none;
-	display: block;
+	display: flex;
 	transition: all 0.5s ease-in-out;
+	margin: 1.5dvh .4dvw;
   }
   
   .dropdown-menu-content a:hover {
 	color: var(--yellow-color);
 	border-radius: 0.5dvw 0.5dvw 0.5dvw 0.5dvw;
-	margin: 0.2dvh 0.2dvw 0.2dvh 0.2dvw;
   }
   
   .dropdown-menu:hover .dropdown-menu-content {
@@ -164,12 +185,21 @@
   .align-top {
 	align-self: start;
   }
-  
-  .location-map {
+
+  .mapouter{
+	position:relative;
+	text-align:right;
+	margin-bottom: 10dvw;
 	align-items: center;
-	width: 80%;
+  }
+
+  .gmap_canvas {
+	overflow:hidden;
+	background:none!important;
+  }
+  #gmap_canvas{
 	height: 50vw;
-	margin-bottom: 10vw;
+	width: 80vw;
   }
   
   .location-text {
@@ -188,34 +218,22 @@
   }
   
   footer {
-	display: grid;
-	position:absolute;
-	margin: 0;
-	bottom: 0;
-	padding-top: 2vw;
-	padding-bottom: 2vw;
-	grid-template-columns: 1fr 1fr;
+	display: flex;
 	color: var(--yellow-color);
 	background: var(--red-color);
-	width: 100vw;
 	font-size: 1vw;
   }
   
   .footer-left {
-	max-width: 15vw;
 	text-align: left;
-	padding-left: 3vw;
-	padding-top: 6dvh;
+	flex-direction: column;
+	padding: 10dvh 0 0 3dvw;
   }
   
   .footer-right {
-	max-width: 12vw;
 	text-align: right;
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	padding-bottom: 2vw;
-	padding-right: 3vw;
+	padding: 3dvh 0 3dvh 72dvw;
+	flex-direction: column;
   }
   
   .main-grid {
@@ -643,7 +661,6 @@
   }
   /*End Daryl*/
   
-  /*Tran Thu*/
   
   @media only screen and (max-width: 500px) {
 	* {
